--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 </head>
 <body>
   <nav>
+    <div id="main-navbar">
+    <div id="navbar-container">
     <ul>
       <li><a href="index.html">Resume</a></li>
       <li><a href="page2.html">Ballet</a></li>
       <li><a href="page3.html">Writing</a></li>
     </ul>
+    </div>
+    </div>
   </nav>
   <div>
     <h1>Sophia Robles</h1>
