--- a/page2.html
+++ b/page2.html
@@ -2,16 +2,21 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
   <meta charset="UTF-8">
   <title>ballet</title>
 </head>
 <body>
   <nav>
+    <div id="main-navbar">
+    <div id="navbar-container">
     <ul>
       <li><a href="index.html">Resume</a></li>
       <li><a href="page2.html">Ballet</a></li>
       <li><a href="page3.html">Writing</a></li>
     </ul>
+    </div>
+    </div>
   </nav>
   <div>
     <h1>Sophia Robles</h1>
