--- a/page3.html
+++ b/page3.html
@@ -2,16 +2,21 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
   <meta charset="UTF-8">
   <title>writing</title>
 </head>
 <body>
   <nav>
+    <div id="main-navbar">
+    <div id="navbar-container">
     <ul>
       <li><a href="index.html">Resume</a></li>
       <li><a href="page2.html">Ballet</a></li>
       <li><a href="page3.html">Writing</a></li>
     </ul>
+    </div>
+    </div>
   </nav>
   <h1>Sophia Robles</h1>
   <p>Writing Portfolio</p>
