--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
   <title>resume</title>
 </head>
 <body>
-  <nav>
-    <div id="main-navbar">
-    <div id="navbar-container">
-    <ul>
-      <li><a href="index.html">Resume</a></li>
-      <li><a href="page2.html">Ballet</a></li>
-      <li><a href="page3.html">Writing</a></li>
-    </ul>
-    </div>
-    </div>
-  </nav>
+  	<nav id="main-navbar">
+      <div id="navbar-container" class="container">
+        <ul>
+          <li><a href="index.html">Resume</a></li>
+          <li><a href="page2.html">Ballet</a></li>
+          <li><a href="page3.html">Writing</a></li>
+        </ul>
+      </div>
+    </nav>
   <div>
     <h1>Sophia Robles</h1>
     <p>Chicago, IL (989) 297-5631 srobles2@hawk.iit.edu</p>
