--- a/page3.html
+++ b/page3.html
@@ -7,15 +7,13 @@
   <title>writing</title>
 </head>
 <body>
-  <nav>
-    <div id="main-navbar">
-    <div id="navbar-container">
-    <ul>
-      <li><a href="index.html">Resume</a></li>
-      <li><a href="page2.html">Ballet</a></li>
-      <li><a href="page3.html">Writing</a></li>
-    </ul>
-    </div>
+  <nav id="main-navbar">
+    <div id="navbar-container" class="container">
+      <ul>
+        <li><a href="index.html">Resume</a></li>
+        <li><a href="page2.html">Ballet</a></li>
+        <li><a href="page3.html">Writing</a></li>
+      </ul>
     </div>
   </nav>
   <h1>Sophia Robles</h1>
