--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ul>
       </div>
     </nav>
-  <div>
+  <div id="name">
     <h1>Sophia Robles</h1>
     <p>Chicago, IL (989) 297-5631 srobles2@hawk.iit.edu</p>
   </div>
