--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
   <div>
     <h1>Sophia Robles</h1>
-    <p>Chicago, IL (989) 297-5631 srobles2@hawk.iit.edu</p>
+    <p id="subtitle">Chicago, IL (989) 297-5631 srobles2@hawk.iit.edu</p>
   </div>
   <h2>Education</h2>
   <div>
