--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       </div>
     </nav>
   <div>
-    <h1>Sophia Robles</h1>
-    <p id="subtitle">Chicago, IL (989) 297-5631 srobles2@hawk.iit.edu</p>
+    <h1 id="name">Sophia Robles</h1>
+    <p id="contact">Chicago, IL (989) 297-5631 srobles2@hawk.iit.edu</p>
   </div>
   <h2>Education</h2>
   <div>
