--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </div>
   <h2>Education</h2>
   <div>
-    <h4>ILLINOIS INSTITUTE OF TECHNOLOGY, CHICAGO, IL</h4>
-    <p>4.0 GPA M.A.S./B.A.C. Information Technology and Management 2025</p> 
+    <h4 id="instution">ILLINOIS INSTITUTE OF TECHNOLOGY, CHICAGO, IL</h4>
+    <p id="major">4.0 GPA M.A.S./B.A.C. Information Technology and Management 2025</p> 
     <p>Relevant Courses: CompTIA Linux+, TestOut Network Pro/CompTIA Network+ N, CompTIA A+</p>        
     <ul>
       <li>Double minor in Operating Systems and Software Engineering</li>  
@@ -31,14 +31,14 @@
     </ul>
    </div>
     <div>
-      <h4>H.H. DOW HIGH SCHOOL, MIDLAND, MI</h4>
+      <h4 id="instution">H.H. DOW HIGH SCHOOL, MIDLAND, MI</h4>
       <p>2021 International Baccalaureate</p>
       <ul>
         <li>Bolt Media Video Production, Dow High Update Newspaper</li>
       </ul>
     </div>
     <div>
-      <h4>FLINT SCHOOL OF PERFORMING ARTS, FLINT, MI</h4>
+      <h4 id="instution">FLINT SCHOOL OF PERFORMING ARTS, FLINT, MI</h4>
       <p>2021 Flint Youth Ballet</p>
       <ul>
         <li>Pre-professional Ballet on SAB curriculum</li>
