--- a/index.html
+++ b/index.html
@@ -25,42 +25,42 @@
     <h4 id="instution">ILLINOIS INSTITUTE OF TECHNOLOGY, CHICAGO, IL</h4>
     <p id="major">4.0 GPA M.A.S./B.A.C. Information Technology and Management 2025</p> 
     <p>Relevant Courses: CompTIA Linux+, TestOut Network Pro/CompTIA Network+ N, CompTIA A+</p>        
-    <ul>
+    <ul id="achievement">
       <li>Double minor in Operating Systems and Software Engineering</li>  
       <li>2022 Outstanding First Year Student in Information Technology and Management</li>
     </ul>
    </div>
     <div>
       <h4 id="instution">H.H. DOW HIGH SCHOOL, MIDLAND, MI</h4>
-      <p>2021 International Baccalaureate</p>
-      <ul>
+      <p id="major">2021 International Baccalaureate</p>
+      <ul id="achievement">
         <li>Bolt Media Video Production, Dow High Update Newspaper</li>
       </ul>
     </div>
     <div>
       <h4 id="instution">FLINT SCHOOL OF PERFORMING ARTS, FLINT, MI</h4>
-      <p>2021 Flint Youth Ballet</p>
-      <ul>
+      <p id="major">2021 Flint Youth Ballet</p>
+      <ul id="achievement">
         <li>Pre-professional Ballet on SAB curriculum</li>
       </ul>
     </div>
     <h2>Skills</h2>
     <div>
       <h4>Programming & Technologies</h4>
-      <ul>
+      <ul id="achievement">
         <li>Experience with: SQL, Python, Java, HTML/CSS, R/R Studio, Adobe Suite, Microsoft Suite</li>
       </ul>
     </div>
     <div>
       <h4>Writing</h4>
-      <ul>
+      <ul id="achievement">
         <li>Awards: National Young Arts Finalist, Scholastic Art & Writing Awards, Michigan Youth Arts Awards, Interlochen Arts Virginia B. Ball Scholar, 1st Place Idyllwild Arts Scholarship Winner, River Junction Poets, Michigan State Spartan Awards</li>
         <li>Published with: Scholastic Art & Writing, MYAF, River Junction Poets, Theodore Roethke Foundation, Perspectives Journal, Parallax Journal, Cardinal Sins</li>
       </ul>
     </div>
     <div>
       <h4>Ballet</h4>
-        <ul>
+        <ul id="achievement">
           <li>Flint Youth Ballet, Young People's Ballet Theatre, Grand Rapids Ballet, Saginaw Dance Art Project</li> 
         </ul>
     </div>
@@ -69,13 +69,13 @@
         <h4>Resident Advisor</h4>
         <p>2022 - Present</p>
         <p>Illinois Institute of Technology</p>
-        <ul><li>Create community within university residence halls to provide academic support and attend to the overall wellbeing, safety, and security of student residents</li></ul>
+        <ul id="achievement"><li>Create community within university residence halls to provide academic support and attend to the overall wellbeing, safety, and security of student residents</li></ul>
     </div>
     <div>
       <h4>Research Specialist</h4>
       <p>2021 - Present</p>
       <p>Illinois Institute of Technology</p>
-      <ul>
+      <ul id="achievement">
         <li>Utilize library databases to aid in university research of various departments</li>
       </ul>
     </div>
@@ -83,19 +83,19 @@
       <h4>English Tutor</h4>
       <p>2020 - Present</p>
       <p>Self-employed</p>
-      <ul><li>Create individualized learning plans guided by skill assessments to assist clients in reaching personal application goals</li></ul>
+      <ul id="achievement"><li>Create individualized learning plans guided by skill assessments to assist clients in reaching personal application goals</li></ul>
     </div>
     <div>
       <h4>Boutique Owner</h4>
       <p>2019-2021</p>
       <p>PECOSA</p>
-      <ul><li>Designed website, ran social media advertising campaigns, negotiated contracts with vendors, and managed financial records</li></ul>
+      <ul id="achievement"><li>Designed website, ran social media advertising campaigns, negotiated contracts with vendors, and managed financial records</li></ul>
     </div>
     <div>
       <h4>Team Lead</h4>
       <p>Skyzone</p>
       <p>2019-2020</p>
-      <ul>
+      <ul id="achievement">
         <li>Guided team members to maintain productive operations, kept financial records, enforced safety policy, planned events, and taught aerobic exercise classes</li></ul>
     </div>
 </body>
