--- a/page2.html
+++ b/page2.html
@@ -17,8 +17,8 @@
     </div>
   </nav>
   <div>
-    <h1>Sophia Robles</h1>
-    <p>Dance Portfolio</p>
+    <h1 id="name">Sophia Robles</h1>
+    <p id="portfolio">Dance Portfolio</p>
   </div>
   <img src="images/class.jpg" alt="class">
   <h2>Background</h2>
