--- a/page3.html
+++ b/page3.html
@@ -16,8 +16,8 @@
       </ul>
     </div>
   </nav>
-  <h1>Sophia Robles</h1>
-  <p>Writing Portfolio</p>
+  <h1 id="name">Sophia Robles</h1>
+  <p id="portfolio">Writing Portfolio</p>
   <h2>Awards</h2>
     <ul>
       <li>National Young Arts Finalist</li>
