--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@
     <h1 id="name">Sophia Robles</h1>
     <p id="portfolio">Dance Portfolio</p>
   </div>
-  <img src="images/class.jpg" alt="class">
+  <img id="class" src="images/class.jpg" alt="class">
   <h2>Background</h2>
   <div>
     <h3>Styles</h3>
