--- a/page2.html
+++ b/page2.html
@@ -26,7 +26,7 @@
     <h3>Styles</h3>
     <p>Ballet, Pointe, Modern, Contemporary, Jazz, Lyrical</p>
   </div>
-    <img id="dance" src="images/arabesque.jpg" alt="arabesque">
+    <img id="bw" src="images/arabesque.jpg" alt="arabesque">
   <div>
     <h3>Formal Training</h3>
     <ul>
@@ -35,7 +35,7 @@
       <li>Carrolanne Killmer School of Dance</li>
     </ul>
   </div>
-    <img id="bw" src="images/blackwhite.jpg" alt="blackwhite">
+    <img id="dance" src="images/blackwhite.jpg" alt="blackwhite">
   <div>
     <h3>Professional Experience</h3>
     <ul>
