update image sizing

--- a/page2.html
+++ b/page2.html
@@ -20,13 +20,13 @@
     <h1 id="name">Sophia Robles</h1>
     <p id="portfolio">Dance Portfolio</p>
   </div>
-  <img id="dance" src="images/class.jpg" alt="class">
+  <img id="class" src="images/class.jpg" alt="class">
   <h2>Background</h2>
   <div>
     <h3>Styles</h3>
     <p>Ballet, Pointe, Modern, Contemporary, Jazz, Lyrical</p>
   </div>
-    <img id="dance" src="images/arabesque.jpg" alt="arabesque">
+    <img id="arabesque" src="images/arabesque.jpg" alt="arabesque">
   <div>
     <h3>Formal Training</h3>
     <ul>
@@ -35,7 +35,7 @@
       <li>Carrolanne Killmer School of Dance</li>
     </ul>
   </div>
-    <img id="dance" src="images/blackwhite.jpg" alt="blackwhite">
+    <img id="blackwhite" src="images/blackwhite.jpg" alt="blackwhite">
   <div>
     <h3>Professional Experience</h3>
     <ul>
@@ -46,6 +46,6 @@
       <li>Saginaw Dance Art Project</li>
     </ul>
   </div>
-  <img id="dance" src="images/powderdance.jpg" alt="powderdance">
+  <img id="powderdance" src="images/powderdance.jpg" alt="powderdance">
 </body>
 </html>
