--- a/page2.html
+++ b/page2.html
@@ -23,12 +23,12 @@
   <img id="class" src="images/class.jpg" alt="class">
   <h2>Background</h2>
   <div>
-    <h3 id="institution">Styles</h3>
+    <h4>Styles</h4>
     <p>Ballet, Pointe, Modern, Contemporary, Jazz, Lyrical</p>
   </div>
     <img id="arabesque" src="images/arabesque.jpg" alt="arabesque">
   <div>
-    <h3 id="institution">Formal Training</h3>
+    <h4>Formal Training</h4>
     <ul>
       <li>Flint School of Performing Arts</li>
       <li>Young People's Ballet Theatre</li>
@@ -37,7 +37,7 @@
   </div>
     <img id="blackwhite" src="images/blackwhite.jpg" alt="blackwhite">
   <div>
-    <h3 id="institution">Professional Experience</h3>
+    <h4>Professional Experience</h4>
     <ul>
       <li>Flint Youth Ballet</li>
       <li>Grand Rapids Ballet</li>
