--- a/page3.html
+++ b/page3.html
@@ -19,7 +19,7 @@
   <h1 id="name">Sophia Robles</h1>
   <p id="portfolio">Writing Portfolio</p>
   <h2>Awards</h2>
-    <ul>
+    <ul id="achievement">
       <li>National Young Arts Finalist</li>
       <li>Scholastic Art & Writing Awards</li>
       <li>Michigan Youth Arts Awards</li> 
@@ -29,7 +29,7 @@
       <li>Michigan State Spartan Awards</li>
     </ul>
   <h2>Published</h2>
-    <ul>
+    <ul id="achievement">
       <li>Scholastic Art & Writing</li>
       <li>MYAF</li>
       <li>River Junction Poets</li>
