--- a/page3.html
+++ b/page3.html
@@ -38,6 +38,6 @@
       <li>Parallax Journal</li>
       <li>Cardinal Sins</li>
   </ul>
-  <iframe src="https://www.youtube.com/embed/IxY2g4mR8Xk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe id="video" src="https://www.youtube.com/embed/IxY2g4mR8Xk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
