--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <p id="contact">Chicago, IL (989) 297-5631 srobles2@hawk.iit.edu</p>
   </div>
   <h2>Education</h2>
-  <div>
-    <h4 id="instution">ILLINOIS INSTITUTE OF TECHNOLOGY, CHICAGO, IL</h4>
+  <div id="instution">
+    <h4>ILLINOIS INSTITUTE OF TECHNOLOGY, CHICAGO, IL</h4>
     <p id="major">4.0 GPA M.A.S./B.A.C. Information Technology and Management 2025</p> 
     <p>Relevant Courses: CompTIA Linux+, TestOut Network Pro/CompTIA Network+ N, CompTIA A+</p>        
     <ul id="achievement">
@@ -31,15 +31,15 @@
       <li>2022 Outstanding First Year Student in Information Technology and Management</li>
     </ul>
    </div>
-    <div>
-      <h4 id="instution">H.H. DOW HIGH SCHOOL, MIDLAND, MI</h4>
+    <div id="instution">
+      <h4>H.H. DOW HIGH SCHOOL, MIDLAND, MI</h4>
       <p id="major">2021 International Baccalaureate</p>
       <ul id="achievement">
         <li>Bolt Media Video Production, Dow High Update Newspaper</li>
       </ul>
     </div>
-    <div>
-      <h4 id="instution">FLINT SCHOOL OF PERFORMING ARTS, FLINT, MI</h4>
+    <div id="instution">
+      <h4>FLINT SCHOOL OF PERFORMING ARTS, FLINT, MI</h4>
       <p id="major">2021 Flint Youth Ballet</p>
       <ul id="achievement">
         <li>Pre-professional Ballet on SAB curriculum</li>
