--- a/index.html
+++ b/index.html
@@ -22,61 +22,61 @@
     <p id="contact">Chicago, IL (989) 297-5631 srobles2@hawk.iit.edu</p>
   </div>
   <h2>Education</h2>
-  <div id="instution">
+  <div>
     <h4>ILLINOIS INSTITUTE OF TECHNOLOGY, CHICAGO, IL</h4>
-    <p id="major">4.0 GPA M.A.S./B.A.C. Information Technology and Management 2025</p> 
+    <p>>4.0 GPA M.A.S./B.A.C. Information Technology and Management 2025</p> 
     <p>Relevant Courses: CompTIA Linux+, TestOut Network Pro/CompTIA Network+ N, CompTIA A+</p>        
-    <ul id="achievement">
+    <ul>
       <li>Double minor in Operating Systems and Software Engineering</li>  
       <li>2022 Outstanding First Year Student in Information Technology and Management</li>
     </ul>
    </div>
-    <div id="instution">
+    <div>
       <h4>H.H. DOW HIGH SCHOOL, MIDLAND, MI</h4>
-      <p id="major">2021 International Baccalaureate</p>
-      <ul id="achievement">
+      <p>2021 International Baccalaureate</p>
+      <ul>
         <li>Bolt Media Video Production, Dow High Update Newspaper</li>
       </ul>
     </div>
-    <div id="instution">
+    <div>
       <h4>FLINT SCHOOL OF PERFORMING ARTS, FLINT, MI</h4>
-      <p id="major">2021 Flint Youth Ballet</p>
-      <ul id="achievement">
+      <p>2021 Flint Youth Ballet</p>
+      <ul>
         <li>Pre-professional Ballet on SAB curriculum</li>
       </ul>
     </div>
     <h2>Skills</h2>
     <div>
       <h4>Programming & Technologies</h4>
-      <ul id="achievement">
+      <ul>
         <li>Experience with: SQL, Python, Java, HTML/CSS, R/R Studio, Adobe Suite, Microsoft Suite</li>
       </ul>
     </div>
     <div>
       <h4>Writing</h4>
-      <ul id="achievement">
+      <ul>
         <li>Awards: National Young Arts Finalist, Scholastic Art & Writing Awards, Michigan Youth Arts Awards, Interlochen Arts Virginia B. Ball Scholar, 1st Place Idyllwild Arts Scholarship Winner, River Junction Poets, Michigan State Spartan Awards</li>
         <li>Published with: Scholastic Art & Writing, MYAF, River Junction Poets, Theodore Roethke Foundation, Perspectives Journal, Parallax Journal, Cardinal Sins</li>
       </ul>
     </div>
     <div>
       <h4>Ballet</h4>
-        <ul id="achievement">
+        <ul>
           <li>Flint Youth Ballet, Young People's Ballet Theatre, Grand Rapids Ballet, Saginaw Dance Art Project</li> 
         </ul>
     </div>
     <h2>Professional Experience</h2>
       <div>
         <h4>Resident Advisor</h4>
-        <p id="year">2022 - Present</p>
+        <p">2022 - Present</p>
         <p>Illinois Institute of Technology</p>
-        <ul id="achievement"><li>Create community within university residence halls to provide academic support and attend to the overall wellbeing, safety, and security of student residents</li></ul>
+        <ul><li>Create community within university residence halls to provide academic support and attend to the overall wellbeing, safety, and security of student residents</li></ul>
     </div>
     <div>
       <h4>Research Specialist</h4>
-      <p id="year">2021 - Present</p>
+      <p>2021 - Present</p>
       <p>Illinois Institute of Technology</p>
-      <ul id="achievement">
+      <ul>
         <li>Utilize library databases to aid in university research of various departments</li>
       </ul>
     </div>
