--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     <h2>Professional Experience</h2>
       <div>
         <h4>Resident Advisor</h4>
-        <p">2022 - Present</p>
+        <p>2022 - Present</p>
         <p>Illinois Institute of Technology</p>
         <ul><li>Create community within university residence halls to provide academic support and attend to the overall wellbeing, safety, and security of student residents</li></ul>
-    </div>
+      </div>
     <div>
       <h4>Research Specialist</h4>
       <p>2021 - Present</p>
@@ -82,21 +82,21 @@
     </div>
     <div>
       <h4>English Tutor</h4>
-      <p id="year">2020 - Present</p>
+      <p>2020 - Present</p>
       <p>Self-employed</p>
-      <ul id="achievement"><li>Create individualized learning plans guided by skill assessments to assist clients in reaching personal application goals</li></ul>
+      <ul><li>Create individualized learning plans guided by skill assessments to assist clients in reaching personal application goals</li></ul>
     </div>
     <div>
       <h4>Boutique Owner</h4>
-      <p id="year">2019-2021</p>
+      <p>2019-2021</p>
       <p>PECOSA</p>
-      <ul id="achievement"><li>Designed website, ran social media advertising campaigns, negotiated contracts with vendors, and managed financial records</li></ul>
+      <ul><li>Designed website, ran social media advertising campaigns, negotiated contracts with vendors, and managed financial records</li></ul>
     </div>
     <div>
       <h4>Team Lead</h4>
       <p>Skyzone</p>
-      <p id="year">2019-2020</p>
-      <ul id="achievement">
+      <p>2019-2020</p>
+      <ul>
         <li>Guided team members to maintain productive operations, kept financial records, enforced safety policy, planned events, and taught aerobic exercise classes</li></ul>
     </div>
 </body>
