--- a/page3.html
+++ b/page3.html
@@ -20,7 +20,7 @@
   <h1 id="name">Sophia Robles</h1>
   <p id="portfolio">Writing Portfolio</p>
   <h2>Awards</h2>
-    <ul id="achievement">
+    <ul>
       <li>National Young Arts Finalist</li>
       <li>Scholastic Art & Writing Awards</li>
       <li>Michigan Youth Arts Awards</li> 
@@ -30,7 +30,7 @@
       <li>Michigan State Spartan Awards</li>
     </ul>
   <h2>Published</h2>
-    <ul id="achievement">
+    <ul>
       <li>Scholastic Art & Writing</li>
       <li>MYAF</li>
       <li>River Junction Poets</li>
@@ -39,6 +39,6 @@
       <li>Parallax Journal</li>
       <li>Cardinal Sins</li>
   </ul>
-  <iframe id="video" src="https://www.youtube.com/embed/IxY2g4mR8Xk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe src="https://www.youtube.com/embed/IxY2g4mR8Xk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
