--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
         </ul>
       </div>
     </nav>
+  <section>
   <div>
     <h1 id="name">Sophia Robles</h1>
     <p id="contact">Chicago, IL (989) 297-5631 srobles2@hawk.iit.edu</p>
   </div>
+  </section>
+  <section>
   <h2>Education</h2>
   <div>
     <h4>ILLINOIS INSTITUTE OF TECHNOLOGY, CHICAGO, IL</h4>
@@ -45,6 +48,8 @@
         <li>Pre-professional Ballet on SAB curriculum</li>
       </ul>
     </div>
+  </section>
+  <section>
     <h2>Skills</h2>
     <div>
       <h4>Programming & Technologies</h4>
@@ -65,6 +70,8 @@
           <li>Flint Youth Ballet, Young People's Ballet Theatre, Grand Rapids Ballet, Saginaw Dance Art Project</li> 
         </ul>
     </div>
+  </section>
+  <section>
     <h2>Professional Experience</h2>
       <div>
         <h4>Resident Advisor</h4>
@@ -84,13 +91,15 @@
       <h4>English Tutor</h4>
       <p>2020 - Present</p>
       <p>Self-employed</p>
-      <ul><li>Create individualized learning plans guided by skill assessments to assist clients in reaching personal application goals</li></ul>
+      <ul>
+        <li>Create individualized learning plans guided by skill assessments to assist clients in reaching personal application goals</li></ul>
     </div>
     <div>
       <h4>Boutique Owner</h4>
       <p>2019-2021</p>
       <p>PECOSA</p>
-      <ul><li>Designed website, ran social media advertising campaigns, negotiated contracts with vendors, and managed financial records</li></ul>
+      <ul>
+        <li>Designed website, ran social media advertising campaigns, negotiated contracts with vendors, and managed financial records</li></ul>
     </div>
     <div>
       <h4>Team Lead</h4>
@@ -99,5 +108,6 @@
       <ul>
         <li>Guided team members to maintain productive operations, kept financial records, enforced safety policy, planned events, and taught aerobic exercise classes</li></ul>
     </div>
+  </section>
 </body>
 </html>
