--- a/page2.html
+++ b/page2.html
@@ -17,11 +17,14 @@
       </ul>
     </div>
   </nav>
+<section>
   <div>
     <h1 id="name">Sophia Robles</h1>
     <p id="portfolio">Dance Portfolio</p>
   </div>
+</section>
   <img id="class" src="images/class.jpg" alt="class">
+<section>
   <h2>Background</h2>
   <div>
     <h4>Styles</h4>
@@ -38,6 +41,8 @@
   </div>
     <img id="blackwhite" src="images/blackwhite.jpg" alt="blackwhite">
   <div>
+</section>
+<section>
     <h4>Professional Experience</h4>
     <ul>
       <li>Flint Youth Ballet</li>
@@ -47,6 +52,7 @@
       <li>Saginaw Dance Art Project</li>
     </ul>
   </div>
+</section>
   <img id="powderdance" src="images/powderdance.jpg" alt="powderdance">
 </body>
 </html>
