--- a/page3.html
+++ b/page3.html
@@ -17,8 +17,11 @@
       </ul>
     </div>
   </nav>
+<section>
   <h1 id="name">Sophia Robles</h1>
   <p id="portfolio">Writing Portfolio</p>
+</section>
+<section>
   <h2>Awards</h2>
     <ul>
       <li>National Young Arts Finalist</li>
@@ -29,6 +32,8 @@
       <li>River Junction Poets</li>
       <li>Michigan State Spartan Awards</li>
     </ul>
+</section>
+<section>
   <h2>Published</h2>
     <ul>
       <li>Scholastic Art & Writing</li>
@@ -39,6 +44,7 @@
       <li>Parallax Journal</li>
       <li>Cardinal Sins</li>
   </ul>
+</section>
   <iframe src="https://www.youtube.com/embed/IxY2g4mR8Xk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
