--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@300&display=swap" rel="style">
-  <meta charset="UTF-8">
+  <script src="js/map.js"></script>
   <title>resume</title>
 </head>
 <body>
@@ -14,6 +15,7 @@
           <li><a href="index.html">Resume</a></li>
           <li><a href="page2.html">Ballet</a></li>
           <li><a href="page3.html">Writing</a></li>
+          <li><a href="page4.html">Map</a></li>
         </ul>
       </div>
     </nav>
