--- a/page2.html
+++ b/page2.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@300&display=swap" rel="style">
-  <meta charset="UTF-8">
-  <title>ballet</title>
+  <script src="js/map.js"></script>
+  <title>resume</title>
 </head>
 <body>
-  <nav id="main-navbar">
-    <div id="navbar-container" class="container">
-      <ul>
-        <li><a href="index.html">Resume</a></li>
-        <li><a href="page2.html">Ballet</a></li>
-        <li><a href="page3.html">Writing</a></li>
-      </ul>
-    </div>
-  </nav>
+  	<nav id="main-navbar">
+      <div id="navbar-container" class="container">
+        <ul>
+          <li><a href="index.html">Resume</a></li>
+          <li><a href="page2.html">Ballet</a></li>
+          <li><a href="page3.html">Writing</a></li>
+          <li><a href="page4.html">Map</a></li>
+        </ul>
+      </div>
+    </nav>
 <section>
   <div>
     <h1 id="name">Sophia Robles</h1>
