--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@300&display=swap" rel="style">
   <script src="js/map.js"></script>
-  <title>resume</title>
+  <title>ballet</title>
 </head>
 <body>
   	<nav id="main-navbar">
