--- a/page4.html
+++ b/page4.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@300&display=swap" rel="style">
   <script src="js/map.js"></script>
-  <title>resume</title>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script>
+  <title>map</title>
 </head>
 <body>
   	<nav id="main-navbar">
@@ -19,3 +20,4 @@
         </ul>
       </div>
     </nav>
+
