--- a/page4.html
+++ b/page4.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@300&display=swap" rel="style">
   <script src="js/map.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDz12B3MyCljzaDHDsE_8TUXbuAHlZzNos=initMap" async defer ></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDz12B3MyCljzaDHDsE_8TUXbuAHlZzNos&callback=initMap"></script>
   <title>map</title>
 </head>
 <body>
