--- a/page4.html
+++ b/page4.html
@@ -21,4 +21,5 @@
     </nav>
     <div id="map"></div>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDz12B3MyCljzaDHDsE_8TUXbuAHlZzNos&callback=initMap"></script>
-
+</body>
+</html>
