--- a/page4.html
+++ b/page4.html
@@ -19,6 +19,7 @@
         </ul>
       </div>
     </nav>
+    <p>This is my favorite place in Chicago.</p>
     <div id="map"></div>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDz12B3MyCljzaDHDsE_8TUXbuAHlZzNos&callback=initMap"></script>
 </body>
