--- a/page4.html
+++ b/page4.html
@@ -20,6 +20,12 @@
         </ul>
       </div>
     </nav>
+    <section>
+      <div>
+        <h1 id="name">Sophia Robles</h1>
+        <p id="store">I love Chanel</p>
+      </div>
+    </section>
     <p>This is my favorite place in Chicago.</p>
     <div id="map"></div>
 </body>
