fix error, add more style

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p id="contact">Chicago, IL (989) 297-5631 srobles2@hawk.iit.edu</p>
   </div>
   </section>
-  <section id="box">
+  <section>
   <h2>Education</h2>
   <div>
     <h4>ILLINOIS INSTITUTE OF TECHNOLOGY, CHICAGO, IL</h4>
@@ -51,7 +51,7 @@
       </ul>
     </div>
   </section>
-  <section id="box">
+  <section>
     <h2>Skills</h2>
     <div>
       <h4>Programming & Technologies</h4>
@@ -73,7 +73,7 @@
         </ul>
     </div>
   </section>
-  <section id="box">
+  <section>
     <h2>Professional Experience</h2>
       <div>
         <h4>Resident Advisor</h4>
